# clipnotes

./: .dockerignore  .eslintignore  .gitignore  README.md  alembic.ini  clipnotes.db  docker-compose.yml  main.py  package-lock.json  pyproject.toml  tmp-metrics.db
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: Dockerfile  main.py
backend/app/api/: deps.py  insights.py  routes.py
backend/tests/: conftest.py
contracts/: api.yaml
docs/: credentials.md  design-tokens.md
docs/performance/: clipnotes.md  insights.md  reasoning.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.base.json  tsconfig.json  vite.config.ts
frontend/src/: flags.ts  index.css  main.tsx
frontend/tests/: accessibility.monitoring.spec.tsx  analyze.spec.tsx  history.spec.tsx  monitoring.analysis.spec.tsx  monitoring.clips.spec.tsx  ui-timeline.spec.tsx
specs/001-video-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-clip-monitoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-reasoning-comparison/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-design-saas-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-insight-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+140 files in other folders)
