[project]
name = "clipnotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"httpx>=0.27.0",
	"pydantic>=2.9.0",
	"python-multipart>=0.0.9",
	"sqlalchemy[asyncio]>=2.0.30",
	"aiosqlite>=0.20.0",
	"asyncpg>=0.29.0",
	"alembic>=1.13.2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.0",
	"ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = [
    "backend/tests/unit",
    "backend/tests/integration",
]

[tool.setuptools]
packages = ["backend"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"